force-app/main/default/objects/Field__mdt/Field__mdt.object-meta.xml
<CustomObject>
    <description>List all the relevant fields of a object and if they have any special function
&gt; currency mgmt, 
&gt; deletion control
&gt; ESR Number
&gt; Template Copy (Project / Package)
Also used to reference fields used on other MTD functions</description>
    <label>Field</label>
    <pluralLabel>Fields</pluralLabel>
</CustomObject>