force-app/main/default/objects/Field__mdt/fields/ControlsDeletion__c.field-meta.xml
<CustomField>
    <fullName>ControlsDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The field is true in case this field is responsible to control whether a record can be deleted or not. Typically you add a formula field which turns true as soon as the deletion of a record has to be prevented.</inlineHelpText>
    <label>Controls deletion</label>
    <type>Checkbox</type>
</CustomField>