force-app/main/default/objects/Field__mdt/fields/CurrencyManagementFieldType__c.field-meta.xml
<CustomField>
    <fullName>CurrencyManagementFieldType__c</fullName>
    <description>Currency to CHF exchange rate field =&gt; In this field the Conversion Rate XYZ to CHF on Date ABC is stored
Currency to SDG exchange rate field =&gt; In this field the Conversion Rate XYZ to SGD on Date ABC is stored
Date of exchange rate field =&gt; Field that contains the date ABC used to get conversion rate
Currency field  =&gt; Field that contains the currency XYZ used to get conversion rate</description>
    <inlineHelpText>Turns Dated Currency Management on for this Object. All the Picklist fields have then be to assigned exactly once to one field</inlineHelpText>
    <label>Currency management field type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency to CHF exchange rate field</fullName>
            </value>
            <value>
                <fullName>Date of exchange rate field</fullName>
            </value>
            <value>
                <fullName>Currency field</fullName>
            </value>
            <value>
                <fullName>Currency to SGD exchange rate field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>