force-app/main/default/objects/Field__mdt/fields/DeletionErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>DeletionErrorMessage__c</fullName>
    <inlineHelpText>Error message that is presented to the user in case the deletion is not allowed.
Used in Combination with the &quot;Controls deletion&quot; Checkbox</inlineHelpText>
    <label>Deletion error message</label>
    <type>TextArea</type>
</CustomField>