force-app/main/default/objects/Field__mdt/fields/ESRFieldType__c.field-meta.xml
<CustomField>
    <fullName>ESRFieldType__c</fullName>
    <description>Input:
1) ESR Merchant Nr
2) Invoice Number
3) ESR Account Number
4) Amount

Output:
5) ESR unformatted
6) ESR formatted
7) ESR code line</description>
    <inlineHelpText>Defines which fields contains the relevant information to read and store the ESR Number. All 7 fields have to be set. For more information see also Description of this field.</inlineHelpText>
    <label>ESR Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESR Merchant Nr</fullName>
            </value>
            <value>
                <fullName>Invoice Number</fullName>
            </value>
            <value>
                <fullName>ESR Account Number</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>ESR unformatted</fullName>
            </value>
            <value>
                <fullName>ESR formatted</fullName>
            </value>
            <value>
                <fullName>ESR code line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>