force-app/main/default/objects/Field__mdt/fields/ExcludeFromTemplate__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the value will not be copied to a Project or Package using the Project Clone Function. For instance it can be set, that the Budget on the Source Package is not copied to the cloned Package.</inlineHelpText>
    <label>ExcludeFromTemplate</label>
    <type>Checkbox</type>
</CustomField>