force-app/main/default/objects/Field__mdt/listViews/Controls_Deletion.listView-meta.xml
<ListView>
    <fullName>Controls_Deletion</fullName>
    <columns>ControlsDeletion__c</columns>
    <columns>DeletionErrorMessage__c</columns>
    <columns>Object__c</columns>
    <columns>MasterLabel</columns>
    <columns>APIName__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ControlsDeletion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Controls Deletion</label>
    <language>en_US</language>
</ListView>