force-app/main/default/objects/Field__mdt/listViews/ProjectCloneExcludeFromTemplate.listView-meta.xml
<ListView>
    <fullName>ProjectCloneExcludeFromTemplate</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object__c</columns>
    <columns>APIName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExcludeFromTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ProjectCloneExcludeFromTemplate</label>
    <language>en_US</language>
</ListView>